[project]
name = "pygame-grid-project"
version = "0.1.0"
description = "A Pygame project with a 16x16 grid map and player movement"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
